Fix lightbox close button text mis-alignment

--- a/src/templates/singleResource.scss
+++ b/src/templates/singleResource.scss
@@ -130,27 +130,35 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
 
-  button {
-    margin-bottom: 16px;
-    align-self: flex-end;
-    border-radius: 50%;
-    width: 24px;
-    height: 24px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: none;
-    background-color: black;
-    color: white;
-    cursor: pointer;
-    transition: all 0.1s ease-out;
+.single-resource__lightbox-button {
+  align-self: flex-end;
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  background-color: black;
+  color: white;
+  cursor: pointer;
+  transition: all 0.1s ease-out;
 
-    &:focus,
-    &:hover {
-      transform: scale(1.025);
-      background-color: var(--magenta);
-    }
+  &:focus,
+  &:hover {
+    transform: scale(1.025);
+    background-color: var(--magenta);
+  }
+
+  &:after {
+    content: "x";
+    color: var(--white);
+    font-weight: 700;
+    font-family: var(--ibmPlexMono);
+    width: 100%;
+    height: 100%;
   }
 }
 
